--- a/notification_hub_backend_service/src/reactnative/PushDemo/package.json
+++ b/notification_hub_backend_service/src/reactnative/PushDemo/package.json
@@ -11,18 +11,18 @@
     "configure": "cp .app.config.tsx src/config/AppConfig.tsx"
   },
   "dependencies": {
-    "@react-native-community/push-notification-ios": "^1.2.2",
+    "@react-native-community/push-notification-ios": "^1.10.1",
     "react": "16.11.0",
-    "react-native": "0.62.2",
-    "react-native-device-info": "^5.6.1",
+    "react-native": "^0.68.2",
+    "react-native-device-info": "^5.6.5",
     "react-native-push-notification": "^3.5.2"
   },
   "devDependencies": {
-    "@babel/core": "^7.6.2",
-    "@babel/runtime": "^7.6.2",
+    "@babel/core": "^7.18.2",
+    "@babel/runtime": "^7.18.3",
     "@react-native-community/eslint-config": "^1.0.0",
     "@types/jest": "^24.0.24",
-    "@types/react-native": "^0.62.0",
+    "@types/react-native": "^0.62.18",
     "@types/react-test-renderer": "16.9.2",
     "@typescript-eslint/eslint-plugin": "^2.27.0",
     "@typescript-eslint/parser": "^2.27.0",
@@ -30,9 +30,9 @@
     "eslint": "^6.5.1",
     "jest": "^24.9.0",
     "metro-react-native-babel-preset": "^0.58.0",
-    "prettier": "^2.0.4",
+    "prettier": "^2.6.2",
     "react-test-renderer": "16.11.0",
-    "typescript": "^3.8.3"
+    "typescript": "^3.9.10"
   },
   "jest": {
     "preset": "react-native",
